syntax = "proto3";

package calculator;
option go_package="./calculatorpb";

message Values {
  int32 first_number = 1;
  int32 second_number = 2;
}

message CalculatorRequest {
  Values value = 1;
}

message CalculatorResponse {
  int32 result = 1;
}

message PrimeDecompositionRequest {
  int32 number = 1;
}

message PrimeDecompositionReponse {
  int32 result = 1;
}

service SumService {
  //Unary
  rpc Sum (CalculatorRequest) returns (CalculatorResponse) {};

  //Server streaming
  rpc PrimeDecomposition(PrimeDecompositionRequest) returns (stream PrimeDecompositionReponse) {};
}
